# file_hash

./: LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/file_hash_example/: MainActivity.kt
example/integration_test/: README.md  file_hash_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: file_hash.podspec
lib/: file_hash.dart  file_hash_bindings_generated.dart
linux/: CMakeLists.txt
macos/: file_hash.podspec
macos/Classes/: file_hash.c
src/: CMakeLists.txt  file_hash.c  file_hash.h
test/: README.md  file_hash_test.dart
windows/: CMakeLists.txt
